--- a/package.json
+++ b/package.json
@@ -78,8 +78,6 @@
     "vue-router": "^3.6.5",
     "vue-shortkey": "^3.1.7",
     "vuedraggable": "^2.24.3",
-    "vuex": "^3.6.2",
-    "vuex-router-sync": "^5.0.0",
     "webdav": "^5.6.0"
   },
   "browserslist": [
@@ -140,7 +138,7 @@
       "clover"
     ],
     "transformIgnorePatterns": [
-      "/node_modules/(?!(@fullcalendar|uuid|webdav)).+\\.js$"
+      "/node_modules/(?!(@fullcalendar|uuid|webdav|p-limit|yocto-queue)).+\\.js$"
     ],
     "setupFilesAfterEnv": [
       "./tests/javascript/jest.setup.js",
